# agentic-system

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  README.md  SECURITY.md  _audit_reqs.txt  agentic_config.example.yaml  commit_msg2.txt  push.bat  push.ps1  push2.bat  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentic_system/: __init__.py  breakers.py  cli.py  config_schema.py  cron.py  embedding_similarity.py  no_progress.py  observability.py  orchestration_status.py  ports.py  py.typed  security_council.py  state_machine.py  sweeps.py
agentic_system/council/: __init__.py  schemas.py  service.py  service.py.patch
agentic_system/events/: __init__.py  async_bus.py  bus.py  envelope.py  hooks.py  state_tables.py  store.py
agentic_system/workflow/: __init__.py  definitions.py  engine.py  worker.py
agentic_system/workflow/definitions/: refactor_sweep.yaml  review_and_test.yaml
dist-build/: agentic_system-0.1.0-py3-none-any.whl
examples/: breaker_demo.py  breakers_demo.py  council_gates_demo.py  council_with_engraphis.py  noprogress_demo.py  observability_demo.py  sweeps_demo.py  workflow_demo.py
tests/: conftest.py  test_breaker_high_impact.py  test_breakers_sweeps.py  test_core.py  test_council.py  test_e2e_workflow_council.py  test_events.py  test_extras_integration.py  test_orchestration_status.py  test_ports_seam.py  test_register_sweeps.py  test_state_machine.py  test_workflow.py
