[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-system"
version = "0.2.0"
description = "Framework-agnostic orchestration layer for autonomous agents: durable event store, deterministic FSM, circuit breakers, no-progress detection, workflow DAG engine, model council, sweeps, and a status/health CLI."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "agentic-system contributors" }]
requires-python = ">=3.10"
keywords = ["agent", "orchestration", "llm", "council", "circuit-breaker", "fsm", "workflow", "autonomous-agents"]
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=5.4",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/Coding-Dev-Tools/agentic-system"
Repository = "https://github.com/Coding-Dev-Tools/agentic-system"
Issues = "https://github.com/Coding-Dev-Tools/agentic-system/issues"
Changelog = "https://github.com/Coding-Dev-Tools/agentic-system/blob/main/CHANGELOG.md"

[project.optional-dependencies]
engraphis = ["engraphis"]          # council verdict persistence to Engraphis
embeddings = ["sentence-transformers"]  # semantic no-progress detection upgrade path
test = ["pytest>=7"]

[project.scripts]
agentic-status = "agentic_system.orchestration_status:main"

[tool.setuptools.packages.find]
include = ["agentic_system*"]

[tool.setuptools.package-data]
agentic_system = ["py.typed", "workflow/definitions/*.yaml"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# High-signal, low-nag: syntax errors + pyflakes (unused imports/vars).
# Deliberately NOT a full style enforcer (no E1xx/E2xx style nags).
select = ["E9", "F"]

[tool.mypy]
# Guard the py.typed contract: catch real type errors without being overly strict.
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false  # not a fully typed codebase yet
ignore_missing_imports = true  # optional deps (engraphis, sentence-transformers) may be missing
exclude = ["tests/*", "examples/*"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["agentic_system.embedding_similarity"]
# sentence-transformers is optional; ignore its untyped internals
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["agentic_system.council.service"]
# engraphis is optional
ignore_missing_imports = true