[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-system"
version = "0.3.0"
description = "Framework-agnostic orchestration layer for autonomous agents: circuit breakers, multi-LLM council, workflow FSM, sweeps. Companion to Engraphis."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Coding-Dev-Tools", email = "jaixii@protonmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
    "PyYAML>=6.0",
]
optional-dependencies = {
    "engraphis" = ["engraphis>=0.9.6"],
    "embeddings" = ["sentence-transformers>=3.0"],
    "dev" = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"],
}

[project.urls]
Homepage = "https://github.com/Coding-Dev-Tools/agentic-system"
Repository = "https://github.com/Coding-Dev-Tools/agentic-system"
Issues = "https://github.com/Coding-Dev-Tools/agentic-system/issues"
[project.scripts]
agentic-system = "agentic_system.cli:main"
orchestration_status = "agentic_system.orchestration_status:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_system*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "UP", "B", "C4", "PTH", "T20", "TID", "ARG", "PL"]
ignore = ["T201", "ARG001", "ARG002", "B008"]
src = ["agentic_system", "tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]